--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,30 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 
 	<dependencies>
-	
+
+		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
-			<scope>provided</scope>
 		</dependency>
+
+
+
+		<!-- <dependency> <groupId>javax.enterprise</groupId> <artifactId>cdi-api</artifactId> 
+			<version>1.2</version> <scope>provided</scope> </dependency> <dependency> 
+			<groupId>javax.faces</groupId> <artifactId>jsf-api</artifactId> <version>2.1</version> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate.javax.persistence</groupId> 
+			<artifactId>hibernate-jpa-2.0-api</artifactId> <version>1.0.1.Final</version> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>javax.interceptor</groupId> 
+			<artifactId>javax.interceptor-api</artifactId> <version>1.2</version> </dependency> 
+			<dependency> <groupId>javax.annotation</groupId> <artifactId>jsr250-api</artifactId> 
+			<version>1.0</version> </dependency> -->
 
 	</dependencies>
 </project>
